Fixed padding on mobile, also fixed audio on multiple occations during gameplay

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -107,13 +107,19 @@ footer {
 */
 @media screen and (max-width: 969px) {
 
+    .container {
+      padding:0;
+      margin:0;
+    }
+
     body {
-      margin-bottom:300px;
+      padding:0;
     }
 
-    footer {
-      height: 280px;
+    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom:0;
     }
-
 }
 
